manifests/app-dashboard/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - imagePullPolicy: Always
        image: asia-southeast1-docker.pkg.dev/fpt-dev/app-dashboard-repo/app-dashboard-backend:v0.0.7
        name: frontend
        livenessProbe:
          httpGet:
            path: /api/v1/invoices
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "0.2"
            memory: "0.5G"
          limits:
            cpu: "0.5"
            memory: "2G"
