manifests/app-dashboard/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spc-pod
spec:
  serviceAccountName: mypodserviceaccount
  # initContainers:
  # - name: init-myservice
  #   image: busybox:1.28
  #   command: ['sh', '-c', "sleep 2;"]
  #   volumeMounts:
  #     - mountPath: "/var/secrets"
  #       name: mysecret
  containers:
  - image: gcr.io/google.com/cloudsdktool/cloud-sdk:slim
    imagePullPolicy: IfNotPresent
    name: mypod
    resources:
      requests:
        cpu: 100m
    stdin: true
    stdinOnce: true
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    tty: true
    volumeMounts:
      - mountPath: "/var/secrets"
        name: mysecret
  volumes:
  - name: mysecret
    csi:
      driver: secrets-store.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: "accounting-dashboard-spc"
