manifests/app-dashboard/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  # annotations:
  #   networking.gke.io/load-balancer-type: "Internal"
spec:
  selector:
    app: backend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
