manifests/app-dashboard/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: external
  #   service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
  #   service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
