manifests/app-dashboard/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
